--- a/static/style.css
+++ b/static/style.css
@@ -231,6 +231,20 @@ pre.chunk {
 }
 .file-header {
 	font-family: monospace;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+.file-header::after {
+	content: "\25b6";
+	font-family: sans-serif;
+	margin-left: auto;
+	font-size: 1.75em;
+	line-height: 100%;
+	margin-right: 0.25em;
+}
+.file-toggle:checked + .file-header::after {
+	content: "\25bc";
 }
 
 /* Form elements */
