Add SPDX license headers to Makefile, SQL, and CSS

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,8 @@
+/*
+ * SPDX-License-Identifier: AGPL-3.0-only                                                                                                             
+ * SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
+ */
+
 /* Base styles and variables */
 html {
 	font-family: sans-serif;
