--- a/static/chroma.css
+++ b/static/chroma.css
@@ -1,3 +1,8 @@
+/*
+ * SPDX-License-Identifier: AGPL-3.0-only                                                                                                             
+ * SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
+ */
+
 @media (prefers-color-scheme: light) {
 	/* Background */ .bg { ; }
 	/* PreWrapper */ .chroma { ; }
