Add SPDX license headers to all HTML templates

--- a/templates/_footer.tmpl
+++ b/templates/_footer.tmpl
@@ -1,3 +1,7 @@
+{{/*
+	SPDX-License-Identifier: AGPL-3.0-only
+	SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
+*/}}
 {{- define "footer" -}}
 <a href="https://lindenii.runxiyu.org/forge/">Lindenii Forge</a> {{ .global.forge_version }} (<a href="/:/source/">source</a>, <a href="https://forge.lindenii.runxiyu.org/lindenii/:/repos/forge/">upstream</a>)
 {{- end -}}
