--- a/templates/group_repos.tmpl
+++ b/templates/group_repos.tmpl
@@ -1,3 +1,7 @@
+{{/*
+	SPDX-License-Identifier: AGPL-3.0-only
+	SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
+*/}}
 {{- define "group_repos" -}}
 <!DOCTYPE html>
 <html lang="en">
