--- a/templates/_head.tmpl
+++ b/templates/_head.tmpl
@@ -1,3 +1,7 @@
+{{/*
+	SPDX-License-Identifier: AGPL-3.0-only
+	SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
+*/}}
 {{- define "head_common" -}}
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
