--- a/templates/_header.tmpl
+++ b/templates/_header.tmpl
@@ -1,3 +1,7 @@
+{{/*
+	SPDX-License-Identifier: AGPL-3.0-only
+	SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
+*/}}
 {{- define "header" -}}
 <header id="main-header">
 	<div id="main-header-forge-title">
