--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,3 +1,7 @@
+{{/*
+	SPDX-License-Identifier: AGPL-3.0-only
+	SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
+*/}}
 {{- define "index" -}}
 <!DOCTYPE html>
 <html lang="en">
