--- a/static/chroma.css
+++ b/static/chroma.css
@@ -1,6 +1,6 @@
 /*
- * SPDX-License-Identifier: AGPL-3.0-only                                                                                                             
- * SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
+ * SPDX-License-Identifier: MIT AND BSD-2-Clause
+ * SPDX-FileContributor: Pygments and Chroma authors
  */
 
 @media (prefers-color-scheme: light) {
