--- a/templates/repo_commit.tmpl
+++ b/templates/repo_commit.tmpl
@@ -7,7 +7,7 @@
 <html lang="en">
 	<head>
 		{{ template "head_common" . }}
-		<title>Commit {{ .commit_id }} &ndash; {{ .repo_name }} &ndash; {{ .group_name }} &ndash; {{ .global.forge_title }}</title>
+		<title>Commit {{ .commit_id }} &ndash; {{ .repo_name }} &ndash; {{ template "group_path_plain" .group_path }} &ndash; {{ .global.forge_title }}</title>
 	</head>
 	<body class="repo-commit">
 		{{ template "header" . }}
