http: Check for direct user access

--- a/templates/_header.tmpl
+++ b/templates/_header.tmpl
@@ -8,8 +8,8 @@
 		<a href="/">{{ .global.forge_title }}</a>
 	</div>
 	<div id="main-header-user">
-		{{ if ne .user_id "" }}
-			<a href="/:/users/{{ .user_id }}">{{ .username }}</a>
+		{{ if ne .user_id_string "" }}
+			<a href="/:/users/{{ .user_id_string }}">{{ .username }}</a>
 		{{ else }}
 			<a href="/:/login/">Login</a>
 		{{ end }}
