--- a/templates/group.tmpl
+++ b/templates/group.tmpl
@@ -17,8 +17,45 @@
 			{{ if .description }}
 			<p>{{ .description }}</p>
 			{{ end }}
+
 			{{ template "group_view" . }}
 		</div>
+		{{ if .direct_access }}
+			<div class="padding-wrapper">
+				<form method="POST" enctype="application/x-www-form-urlencoded">
+					<table>
+						<thead>
+							<tr>
+								<th class="title-row" colspan="2">
+									Create repo
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th scope="row">Repo name</th>
+								<td class="tdinput">
+									<input id="repo-name-input" name="repo_name" type="text" />
+								</td>
+							</tr>
+						</tbody>
+						<tfoot>
+							<tr>
+								<td class="th-like" colspan="2">
+									<div class="flex-justify">
+										<div class="left">
+										</div>
+										<div class="right">
+											<input class="btn-primary" type="submit" value="Create" />
+										</div>
+									</div>
+								</td>
+							</tr>
+						</tfoot>
+					</table>
+				</form>
+			</div>
+		{{ end }}
 		<footer>
 			{{ template "footer" . }}
 		</footer>
