group: Add description field to the create repo form

--- a/templates/group.tmpl
+++ b/templates/group.tmpl
@@ -33,9 +33,15 @@
 						</thead>
 						<tbody>
 							<tr>
-								<th scope="row">Repo name</th>
+								<th scope="row">Name</th>
 								<td class="tdinput">
 									<input id="repo-name-input" name="repo_name" type="text" />
+								</td>
+							</tr>
+							<tr>
+								<th scope="row">Description</th>
+								<td class="tdinput">
+									<input id="repo-desc-input" name="repo_desc" type="text" />
 								</td>
 							</tr>
 						</tbody>
