group/index: Allow repo creation via web

--- a/templates/group.tmpl
+++ b/templates/group.tmpl
@@ -44,6 +44,17 @@
 									<input id="repo-desc-input" name="repo_desc" type="text" />
 								</td>
 							</tr>
+							<tr>
+								<th scope="row">Contrib</th>
+								<td class="tdinput">
+									<select id="repo-contrib-input" name="repo_contrib">
+										<option value="public">Public</option>
+										<option value="registered_user">Registered user</option>
+										<option value="ssh_pubkey">SSH public key</option>
+										<option value="closed">Closed</option>
+									</select>
+								</td>
+							</tr>
 						</tbody>
 						<tfoot>
 							<tr>
