--- a/templates/_footer.tmpl
+++ b/templates/_footer.tmpl
@@ -3,5 +3,5 @@
 	SPDX-FileContributor: Runxi Yu <https://runxiyu.org>
 */}}
 {{- define "footer" -}}
-<a href="https://lindenii.runxiyu.org/forge/">Lindenii Forge</a> {{ .global.forge_version }} (<a href="/:/source/">source</a>, <a href="https://forge.lindenii.runxiyu.org/lindenii/:/repos/forge/">upstream</a>)
+<a href="https://lindenii.runxiyu.org/forge/">Lindenii Forge</a> {{ .global.forge_version }} (<a href="/:/source/">source</a>, <a href="https://forge.lindenii.runxiyu.org/lindenii/forge/:/repos/server/">upstream</a>)
 {{- end -}}
