*: Add column headers to tables

--- a/templates/_group_view.tmpl
+++ b/templates/_group_view.tmpl
@@ -9,6 +9,10 @@
 			<tr>
 				<th colspan="2" class="title-row">Subgroups</th>
 			</tr>
+			<tr>
+				<th scope="col">Name</th>
+				<th scope="col">Description</th>
+			</tr>
 		</thead>
 		<tbody>
 			{{- range .subgroups }}
@@ -29,6 +33,10 @@
 	<thead>
 		<tr>
 			<th colspan="2" class="title-row">Repos</th>
+			<tr>
+				<th scope="col">Name</th>
+				<th scope="col">Description</th>
+			</tr>
 		</tr>
 	</thead>
 	<tbody>
