--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -17,6 +17,10 @@
 				<tr>
 					<th colspan="2" class="title-row">Groups</th>
 				</tr>
+				<tr>
+					<th scope="col">Name</th>
+					<th scope="col">Description</th>
+				</tr>
 			</thead>
 			<tbody>
 				{{- range .groups }}
