--- a/templates/repo_contrib_index.tmpl
+++ b/templates/repo_contrib_index.tmpl
@@ -18,6 +18,11 @@
 						<th colspan="3">Merge requests</th>
 					</tr>
 				</thead>
+				<tr>
+					<th scope="col">Name</th>
+					<th scope="col">Description</th>
+					<th scope="col">Status</th>
+				</tr>
 				<tbody>
 					{{- range .merge_requests }}
 						<tr>
