--- a/templates/repo_tree_dir.tmpl
+++ b/templates/repo_tree_dir.tmpl
@@ -18,6 +18,11 @@
 						<th colspan="3">
 							/{{ .path_spec }}{{ if ne .path_spec "" }}/{{ end }}{{ if .ref_name }} on {{ .ref_name }}{{ end }}
 						</th>
+						<tr>
+							<th scope="col">Mode</th>
+							<th scope="col">Filename</th>
+							<th scope="col">Size</th>
+						</tr>
 					</tr>
 				</thead>
 				<tbody>
@@ -38,24 +43,11 @@
 			<div id="refs">
 			</div>
 		</div>
-		<div class="padding-wrapper">
-			{{ if .readme }}
-				<table class="wide">
-					<thead>
-						<tr class="title-row">
-							<th>{{ .readme_filename }}</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td id="readme">
-								{{ .readme -}}
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			{{ end }}
+		{{ if .readme }}
+		<div class="padding-wrapper" id="readme">
+			{{ .readme -}}
 		</div>
+		{{ end }}
 		<footer>
 			{{ template "footer" . }}
 		</footer>
