css: Add outline to select:active

--- a/static/style.css
+++ b/static/style.css
@@ -295,6 +295,9 @@ td.tdinput select {
 	right: 0;
 	bottom: 0;
 }
+select:active {
+	outline: 1.5px var(--primary-color) solid;
+}
 
 
 /* Button styles */
