hooks, fedauth: Add basic federated authentication for git push

--- a/templates/group.tmpl
+++ b/templates/group.tmpl
@@ -50,6 +50,7 @@
 									<select id="repo-contrib-input" name="repo_contrib">
 										<option value="public">Public</option>
 										<option value="ssh_pubkey">SSH public key</option>
+										<option value="federated">Federated service</option>
 										<option value="registered_user">Registered user</option>
 										<option value="closed">Closed</option>
 									</select>
