--- a/templates/_group_view.tmpl
+++ b/templates/_group_view.tmpl
@@ -18,7 +18,7 @@
 			{{- range .subgroups }}
 				<tr>
 					<td>
-						<a href="{{ .Name }}/">{{ .Name }}</a>
+						<a href="{{ .Name | path_escape }}/">{{ .Name }}</a>
 					</td>
 					<td>
 						{{ .Description }}
@@ -43,7 +43,7 @@
 		{{- range .repos }}
 			<tr>
 				<td>
-					<a href=":/repos/{{ .Name }}/">{{ .Name }}</a>
+					<a href=":/repos/{{ .Name | path_escape }}/">{{ .Name }}</a>
 				</td>
 				<td>
 					{{ .Description }}
