--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -26,7 +26,7 @@
 				{{- range .groups }}
 					<tr>
 						<td>
-							<a href="{{ .Name }}/">{{ .Name }}</a>
+							<a href="{{ .Name | path_escape }}/">{{ .Name }}</a>
 						</td>
 						<td>
 							{{ .Description }}
