--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -6,11 +6,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		{{ template "head_common" . }}
-		<title>Index &ndash; {{ .global.forge_title }}</title>
+		{{- template "head_common" . -}}
+		<title>Index &ndash; {{ .global.forge_title -}}</title>
 	</head>
 	<body class="index">
-		{{ template "header" . }}
+		{{- template "header" . -}}
 		<div class="padding-wrapper">
 		<table class="wide">
 			<thead>
@@ -23,16 +23,16 @@
 				</tr>
 			</thead>
 			<tbody>
-				{{- range .groups }}
+				{{- range .groups -}}
 					<tr>
 						<td>
-							<a href="{{ .Name | path_escape }}/">{{ .Name }}</a>
+							<a href="{{- .Name | path_escape -}}/">{{- .Name -}}</a>
 						</td>
 						<td>
-							{{ .Description }}
+							{{- .Description -}}
 						</td>
 					</tr>
-				{{- end }}
+				{{- end -}}
 			</tbody>
 		</table>
 		<div class="padding-wrapper">
@@ -47,17 +47,17 @@
 				<tbody>
 					<tr>
 						<th scope="row">SSH public key</th>
-						<td><code>{{ .global.server_public_key_string }}</code></td>
+						<td><code>{{- .global.server_public_key_string -}}</code></td>
 					</tr>
 					<tr>
 						<th scope="row">SSH fingerprint</th>
-						<td><code>{{ .global.server_public_key_fingerprint }}</code></td>
+						<td><code>{{- .global.server_public_key_fingerprint -}}</code></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 		<footer>
-			{{ template "footer" . }}
+			{{- template "footer" . -}}
 		</footer>
 	</body>
 </html>
