gc: Add a garbage collection button

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -56,6 +56,9 @@
 				</tbody>
 			</table>
 		</div>
+		<div class="padding-wrapper">
+			<a href="/:/gc" class="btn btn-danger">Run the garbage collector</a>
+		</div>
 		<footer>
 			{{- template "footer" . -}}
 		</footer>
