index: Rename gc button again

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -56,7 +56,7 @@
 					<tr>
 						<th scope="row">Memory usage</th>
 						<td>
-							Allocated {{ .mem }} bytes <a href="/:/gc/" class="btn btn-danger">Collect garbage</a>
+							Allocated {{ .mem }} bytes <a href="/:/gc/" class="btn btn-danger">Run the garbage collector</a>
 						</td>
 					</tr>
 				</tbody>
