index: Remove unnecessary newlines in td

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -55,9 +55,7 @@
 					</tr>
 					<tr>
 						<th scope="row">Memory usage</th>
-						<td>
-							Allocated {{ .mem }} bytes <a href="/:/gc/" class="btn btn-danger">Run the garbage collector</a>
-						</td>
+						<td>Allocated {{ .mem }} bytes <a href="/:/gc/" class="btn btn-danger">Run the garbage collector</a></td>
 					</tr>
 				</tbody>
 			</table>
