--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -13,7 +13,7 @@
 		{{- .login_error -}}
 		<div class="padding-wrapper">
 				<form method="POST" enctype="application/x-www-form-urlencoded">
-					<table>
+					<table class="rounded">
 						<thead>
 							<tr>
 								<th class="title-row" colspan="2">
