--- a/templates/repo_commit.tmpl
+++ b/templates/repo_commit.tmpl
@@ -12,7 +12,7 @@
 	<body class="repo-commit">
 		{{- template "header" . -}}
 		<div class="padding-wrapper scroll">
-			<table id="commit-info-table">
+			<table id="commit-info-table" class="rounded">
 				<thead>
 					<tr class="title-row">
 						<th colspan="2">Commit info</th>
