--- a/templates/repo_contrib_index.tmpl
+++ b/templates/repo_contrib_index.tmpl
@@ -12,7 +12,7 @@
 	<body class="repo-contrib-index">
 		{{- template "header" . -}}
 		<div class="padding-wrapper">
-			<table id="recent-merge_requests" class="wide">
+			<table id="recent-merge_requests" class="wide rounded">
 				<thead>
 					<tr class="title-row">
 						<th colspan="3">Merge requests</th>
