--- a/templates/repo_contrib_one.tmpl
+++ b/templates/repo_contrib_one.tmpl
@@ -12,7 +12,7 @@
 	<body class="repo-contrib-one">
 		{{- template "header" . -}}
 		<div class="padding-wrapper">
-			<table id="mr-info-table">
+			<table id="mr-info-table" class="rounded">
 				<thead>
 					<tr class="title-row">
 						<th colspan="2">Merge request info</th>
