--- a/templates/repo_raw_dir.tmpl
+++ b/templates/repo_raw_dir.tmpl
@@ -12,7 +12,7 @@
 	<body class="repo-raw-dir">
 		{{- template "header" . -}}
 		<div class="padding-wrapper scroll">
-			<table id="file-tree" class="wide">
+			<table id="file-tree" class="wide rounded">
 				<thead>
 					<tr class="title-row">
 						<th colspan="3">
