--- a/templates/_group_view.tmpl
+++ b/templates/_group_view.tmpl
@@ -4,7 +4,7 @@
 */}}
 {{- define "group_view" -}}
 {{- if .subgroups -}}
-	<table class="wide">
+	<table class="wide rounded">
 		<thead>
 			<tr>
 				<th colspan="2" class="title-row">Subgroups</th>
@@ -29,7 +29,7 @@
 	</table>
 {{- end -}}
 {{- if .repos -}}
-<table class="wide">
+<table class="wide rounded">
 	<thead>
 		<tr>
 			<th colspan="2" class="title-row">Repos</th>
