--- a/templates/repo_index.tmpl
+++ b/templates/repo_index.tmpl
@@ -12,7 +12,7 @@
 	<body class="repo-index">
 		{{- template "header" . -}}
 		<div class="padding-wrapper">
-			<table id="repo-info-table">
+			<table id="repo-info-table" class="rounded">
 				<thead>
 					<tr class="title-row">
 						<th colspan="2">Repo info</th>
@@ -49,7 +49,7 @@
 		</div>
 		{{- if .commits -}}
 			<div class="padding-wrapper scroll">
-				<table id="recent-commits" class="wide">
+				<table id="recent-commits" class="wide rounded">
 					<thead>
 						<tr class="title-row">
 							<th colspan="3">Recent commits (<a href="log/{{- if .ref_type -}}?{{- .ref_type -}}={{- .ref_name -}}{{- end -}}">see all</a>)</th>
@@ -78,7 +78,7 @@
 		{{- end -}}
 		{{- if .files -}}
 			<div class="padding-wrapper scroll">
-				<table id="file-tree" class="wide">
+				<table id="file-tree" class="wide rounded">
 					<thead>
 						<tr class="title-row">
 							<th colspan="3">/{{- if .ref_name -}} on {{- .ref_name -}}{{- end -}}</th>
